fix: adjust z-index values for header and menu elements

--- a/css/structure.css
+++ b/css/structure.css
@@ -6,8 +6,8 @@
 }
 
 .header {
+  z-index: 1;
   padding: 10px 0;
-  z-index: 5;
   .header-logo {
     width: 100px;
   }
@@ -27,7 +27,7 @@ li ul li {
   position: absolute;
   right: 20px;
   top: 20px;
-  z-index: 100;
+  z-index: 2;
 }
 
 .header-logo {
@@ -60,7 +60,7 @@ li ul li {
   padding: 15px;
   position: relative;
   justify-content: space-between;
-  z-index: 100;
+  z-index: 1;
 }
 
 .burger-menu.active span:nth-child(1) {
@@ -278,7 +278,7 @@ body:has(.nav.active) {
     padding-top: 80px;
     padding-bottom: 20px;
     transition: right 0.4s ease;
-    z-index: 999;
+    z-index: 1;
   }
 
   .nav.active {
